--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+DateTime==4.3
 Flask==1.1.2
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+pytz==2020.4
 requests==2.24.0
 schedule==0.6.0
 urllib3==1.25.11
 Werkzeug==1.0.1
+zope.interface==5.2.0
